# platform-server-template

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.cursor/: scratchpad.md
crates/platform-analytics/: Cargo.toml
crates/platform-analytics/src/: lib.rs  redpanda.rs
crates/platform-api/: Cargo.toml
crates/platform-api/src/: error.rs  lib.rs  metrics_server.rs  middleware.rs  router.rs  state.rs  waitlist_events.rs  waitlist_processor.rs  ws.rs
crates/platform-api/src/auth/: jwt.rs  wallet.rs
crates/platform-api/src/indexer/: mod.rs  search_client.rs
crates/platform-api/src/mysocial/: client.rs  mod.rs
crates/platform-api/src/recommend/: blended.rs  cache.rs  friend.rs  mod.rs  timeline.rs
crates/platform-api/src/routes/: health.rs  interactions.rs  invite.rs  mod.rs  post.rs  recommendations.rs  referral.rs  search.rs  settings.rs  social.rs  streams.rs  user.rs  waitlist.rs
crates/platform-api/src/search/: enrich.rs  filter.rs  mod.rs
crates/platform-core/: Cargo.toml
crates/platform-core/src/: config.rs  error.rs  lib.rs  metrics.rs  state.rs
crates/platform-core/src/settings/: mod.rs
crates/platform-db/: Cargo.toml
crates/platform-db/src/: counters.rs  delivery.rs  embeddings.rs  graph_cache.rs  interactions.rs  invite.rs  lib.rs  migrations.rs  outbox.rs  redis_store.rs  referral.rs  search_history.rs  settings.rs  user_references.rs  waitlist.rs
crates/platform-embeddings/: Cargo.toml
crates/platform-embeddings/src/: lib.rs  openai.rs  service.rs
crates/platform-indexer/: Cargo.toml
crates/platform-indexer/src/: chain_user_resolver.rs  config.rs  cursor.rs  lib.rs  metrics.rs  processor.rs
crates/platform-indexer/src/filters/: mod.rs  platform_filter.rs
crates/platform-indexer/src/grpc/: client.rs
crates/platform-indexer/src/handlers/: dispatcher.rs
crates/platform-indexer/src/parsers/: blocking_events.rs  mod.rs  post_events.rs  social_graph_events.rs
crates/platform-notify/: Cargo.toml
crates/platform-notify/src/: apns.rs  fcm.rs  lib.rs  resend.rs  service.rs  waitlist.rs  ws_hub.rs
crates/platform-server/: Cargo.toml
crates/platform-server/src/: main.rs
docker/: Dockerfile  clickhouse-init.sql
docker/monitoring/: prometheus.yml
docker/monitoring/grafana/dashboards/: platform-overview.json
docker/monitoring/grafana/provisioning/dashboards/: dashboard.yaml
migrations/: 001_base_social.sql  002_indexer_chain_schema.sql  003_recommendation_vectors.sql  004_delivery_and_analytics.sql  005_user_settings_references.sql  006_referrals_invites.sql  007_waitlist.sql  008_app_features.sql  009_search_history.sql
scripts/: rename_project.sh  smoke_test.sh
