[workspace]
resolver = "2"
members = [
    "crates/platform-core",
    "crates/platform-db",
    "crates/platform-indexer",
    "crates/platform-api",
    "crates/platform-notify",
    "crates/platform-analytics",
    "crates/platform-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["The Social Proof Foundation"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "9"
pgvector = { version = "0.4", features = ["sqlx"] }
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
k256 = { version = "0.13", features = ["ecdsa"] }
a2 = "0.10"
clickhouse = { version = "0.13", features = ["inserter", "time"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
myso-rpc = { path = "../myso-rust-sdk/crates/myso-rpc" }
