[package]
name = "platform-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clickhouse.workspace = true
platform-core = { path = "../platform-core" }
platform-db = { path = "../platform-db" }
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
