[package]
name = "platform-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
myso-rpc.workspace = true
platform-core = { path = "../platform-core" }
platform-db = { path = "../platform-db" }
platform-notify = { path = "../platform-notify" }
platform-embeddings = { path = "../platform-embeddings" }
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
uuid.workspace = true
tonic = "0.14"
prost-types = "0.14"

[dev-dependencies]
serde_json.workspace = true
