[package]
name = "platform-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "platform-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
platform-analytics = { path = "../platform-analytics" }
platform-api = { path = "../platform-api" }
platform-core = { path = "../platform-core" }
platform-db = { path = "../platform-db" }
platform-indexer = { path = "../platform-indexer" }
platform-embeddings = { path = "../platform-embeddings" }
platform-notify = { path = "../platform-notify" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
